--- a/Programming Fundamentals with C#/Basic Syntax - Lab/00.Demo/00.Demo.csproj
+++ b/Programming Fundamentals with C#/Basic Syntax - Lab/00.Demo/00.Demo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Basic_Syntax__Conditional_Statements_and_Loops___Lab</RootNamespace>
+    <RootNamespace>_00.Demo</RootNamespace>
   </PropertyGroup>
 
 </Project>
