--- a/Programming Fundamentals with C#/Basic Syntax - Lab/01.Student Information/01.Student Information.csproj
+++ b/Programming Fundamentals with C#/Basic Syntax - Lab/01.Student Information/01.Student Information.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>_01.Student_Information</RootNamespace>
   </PropertyGroup>
 
 </Project>
