--- a/Programming Fundamentals with C#/Methods - More/00.Demo/00.Demo.csproj
+++ b/Programming Fundamentals with C#/Methods - More/00.Demo/00.Demo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_4.Tribonacci</RootNamespace>
+    <RootNamespace>_00.Demo</RootNamespace>
   </PropertyGroup>
 
 </Project>
