--- a/Programming Fundamentals with C#/Methods - More/02. Center Point/02. Center Point.csproj
+++ b/Programming Fundamentals with C#/Methods - More/02. Center Point/02. Center Point.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>_02._Center_Point</RootNamespace>
   </PropertyGroup>
 
 </Project>
