--- a/Programming Fundamentals with C#/Methods - More/03. Longer Line/03. Longer Line.csproj
+++ b/Programming Fundamentals with C#/Methods - More/03. Longer Line/03. Longer Line.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_3.LongerLine</RootNamespace>
+    <RootNamespace>_03._Longer_Line</RootNamespace>
   </PropertyGroup>
 
 </Project>
